<resources>
    <string name="app_name">Donation</string>
    <string name="action_settings">Settings</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donatePlease">Please give  generously</string>
    <string name="donateButton">Donate</string>
    <string name="loginButton">Login</string>
    <string name="signUpButton">Sign Up</string>
    <string name="registerButton">Register</string>
    <string name="PayPal">PayPal</string>
    <string name="Direct">Direct</string>
    <string name="menuReport">Report</string>
    <string name="menudonate">Donate</string>
    <string name="menuLogout">Logout</string>
    <string name="reportTitle">Report</string>
    <string name="initialAmount">Amount</string>
    <string name="amountTotal">Total so far:</string>
    <string name="amountText"></string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="firstName">First Name</string>
    <string name="emailLoginTxt">Email :</string>
    <string name="emailLogin" />
    <string name="passwordLoginTxt">Password :</string>
    <string name="loginViewButton">Login</string>
    <string name="loginHeader">Login</string>
    <string name="amount">Amount</string>
    <string name="amountSoFarLabel">Ammount so Far:</string>

</resources>
